--- a/src/main/resources/templates/role/role-list.html
+++ b/src/main/resources/templates/role/role-list.html
@@ -88,7 +88,7 @@
 
                     });
                 } else if(obj.event === 'edit'){
-                    xadmin.open('编辑用户信息','/user/edit/?id='+data.id);
+                    xadmin.open('编辑用户信息','/role/edit/?id='+data.id);
                 }
             });
 
