--- a/src/main/resources/templates/user/user-list.html
+++ b/src/main/resources/templates/user/user-list.html
@@ -25,7 +25,7 @@
                                 <input class="layui-input" name="search" id="search" autocomplete="off">
                             </div>
                             <button class="layui-btn" data-type="reload">搜索</button>
-                            <button class="layui-btn" onclick="xadmin.open('添加用户','/user/showAdd',600,400)"><i class="layui-icon"></i>添加</button>
+                            <button class="layui-btn" onclick="xadmin.open('添加用户','/user/add',600,400)"><i class="layui-icon"></i>添加</button>
                         </div>
 
                         <table class="layui-hide" id="table" lay-filter="member"></table>
